k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: variation-graphql-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: HOST
    http:
      paths:
      - backend:
          service: 
            name: variation-graphql-svc
            port:
              number: 8000
        path: /api/graphql/variation($|/)(.*)
        pathType: Prefix
